jlatexmath (0.9.4)

	* Add support for few Unicode characters.

        * Fix a bug of cyclic referency between atoms coming from Unicode
	  mapping.

	* Convert foreign numbers into roman ones

        * Add a preview of an error in partial mode
   
        * Add the left quote and reduce slightly the space under for underarrows

        * The percent for comments was not handled

	* HTML entity &#8495; forgotten

	* Fix bug in aligned & alignedat env. (thanks to Graeme Kidd)

	* Add a thread-safe cache to cache the images generated from a formula
	   
        * Can use dollar in \text or \mbox to switch into math mode 

	* Add a static method TeXFormula.getPartialTeXFormula(String) which
	  ignores errors and returns a partial TeXFormula (with no errors).
	  Useful to display LaTeX on typing.
	
	* JLM is now ready for support FOP 1.0 :)

	* Fix a bug in jlmDynamic where the contents where preprocessed	

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

jlatexmath (0.9.3)

	* 0.9.3 version

        * Fix bug of size with colored box

        * Add a map between Unicode (math) and LaTeX symbols
          (e.g. &#8734; => \infty)

        * problem with @{blah} in array env.

jlatexmath (0.9.2)

        * add new commands \tiny, \footnotesize,... and \overwithdelims,...

	* Handle vertical and horizontal lines in array environment

	* Fix bug in the render of (over|under)braces
	
	* Fix bug with A{\scriptstyle BCD}E

	* Fix bug with \left(A\leftarrow B\right)

	* Fix bug with option *{20}c in array env.

	* An argument beginning with \left must be closed by \right (thanks to Juan Enrique)

	* Fix bug with \over (http://bugzilla.scilab.org/show_bug.cgi?id=7226)
	
        * Improve the render of a cfrac (thanks to Juan Enrique)

	* Improve the way to get the arguments of a macro (thanks to Juan Enrique)
 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>

        * Add cfrac macro

	* Possibility to have empty columns in array
	 