@@ -106,11 +106,11 @@ for a text style is not defined (e.g. "numbers" and "small" in "mathcal") -->
   <Metrics include="fonts/base/jlm_moustache.xml" />
   <Metrics include="fonts/base/jlm_cmmi10_unchanged.xml" />
   <Metrics include="fonts/base/jlm_cmmib10_unchanged.xml" />
+  <Metrics include="fonts/maths/jlm_stmary10.xml" />
   <Metrics include="fonts/maths/jlm_cmsy10.xml" />
   <Metrics include="fonts/maths/jlm_msam10.xml" />
   <Metrics include="fonts/maths/jlm_cmbsy10.xml" />
   <Metrics include="fonts/maths/jlm_dsrom10.xml" /> 
-  <Metrics include="fonts/maths/jlm_stmary10.xml" />
   <Metrics include="fonts/maths/jlm_rsfs10.xml" />
   <Metrics include="fonts/euler/jlm_eufm10.xml" />  
   <Metrics include="fonts/euler/jlm_eufb10.xml" />
